# forkwork

./: .gitignore  01_centerline.ghx  README.md  centerline.ghx  process_branch.ghx  pyproject.toml  requirements.txt  test_file.3dm.rhl
grasshopper/components/: GH_AnalyzeBranch.py  GH_ExtractCenterline.py  GH_MeshToSkeleton.py
src/: branch.py  centerline.py  centerline_adv.py  geodesics.py  graph_utils.py  growth_center.py  helpers.py  helpers_copy.py  mesh_geodesics.py  mesh_reconstruction.py  mesh_utils.py  mesh_utils_adv.py
src/branchwork/: __init__.py  branch_analysis.py  centerline.py  mesh_utils.py  skeleton.py
src/branchwork.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_branch_analysis.py  test_centerline.py  test_mesh_utils.py  test_skeleton.py
