[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "branchwork"
version = "0.1.0"
description = "Grasshopper/Rhino plugin for irregular and bifurcated branch analysis using COMPAS."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["grasshopper", "rhino", "compas", "branches", "centerline", "mesh"]
dependencies = [
    "compas>=2.0",
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
